--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <h1>Blackjack</h1>
-        <p id="message-el">Want to play a round?</p>
-        <p id="cards-el">Cards:</p>
-        <p id="sum-el">Sum:</p>
-        <button onclick="startGame()">START GAME</button>
-        <button onclick="newCard()">NEW CARD</button>
-        <script src="index.js"></script>
+        <div id = "blackjack-card1">
+            <div id = "blackjack-card2">
+                <h1>Blackjack</h1>
+                <p id="message-el">Want to play a round?</p>
+                <p id="cards-el">Cards:</p>
+                <p id="sum-el">Sum:</p>
+                <button onclick="startGame()">START GAME</button>
+                <button onclick="newCard()">NEW CARD</button>
+                <script src="index.js"></script>
+            </div>
+       </div>
     </body>
 </html>
